# CamCom-Binary

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
docs/: design.md  format.md  usage.md
include/: codec.hpp  common.h  common.hpp  io.hpp  rs.hpp  tracker.hpp
src/: codec.cpp  common.cpp  decoder.cpp  encoder.cpp  io.cpp  rs.cpp  tracker.cpp
tests/: README.md  integration_metrics.cpp  integration_test.cpp  rs_unit_test.cpp
